--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel="manifest" href="/manifest.json">
-<meta name="theme-color" content="#38bdf8">
+ <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#0f172a">
   <meta charset="UTF-8" />
   <title>AscendTracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
