--- a/public/index.html
+++ b/public/index.html
@@ -4,15 +4,12 @@
   <meta charset="UTF-8" />
   <title>AscendTracker</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
 
   <!-- PWA Manifest -->
-  <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="/manifest.json">
   <meta name="theme-color" content="#38bdf8">
-  <meta name="mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-capable" content="yes">
-  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+  <link rel="stylesheet" href="style.css" />
   <style>
     .top-nav {
       position: sticky;
@@ -26,9 +23,7 @@
       color: #38bdf8;
       font-size: 1.2rem;
     }
-
     .page { padding-top: 1rem; }
-
     .toggle-text {
       text-align: center;
       margin-top: 1rem;
@@ -36,7 +31,6 @@
       color: #9ca3af;
       cursor: pointer;
     }
-
     .hidden { display: none; }
   </style>
 </head>
@@ -47,7 +41,6 @@
   <div class="page">
     <div class="container">
       <div class="card">
-
         <h2 id="formTitle">Login</h2>
 
         <!-- LOGIN -->
@@ -67,7 +60,6 @@
         <div class="toggle-text" onclick="toggleForm()">
           Don’t have an account? Sign up
         </div>
-
       </div>
     </div>
   </div>
@@ -86,7 +78,7 @@
 
       // Register Service Worker
       if ('serviceWorker' in navigator) {
-        navigator.serviceWorker.register('sw.js')
+        navigator.serviceWorker.register('/sw.js')
           .then(() => console.log('Service Worker registered'))
           .catch(err => console.error('Service Worker failed:', err));
       }
