PWA-ready index.html

--- a/public/index.html
+++ b/public/index.html
@@ -121,6 +121,12 @@ function login() {
     showToast("Incorrect username or password");
   }
 }
+
+</script>
+<script>
+if ("serviceWorker" in navigator) {
+  navigator.serviceWorker.register("/sw.js");
+}
 </script>
 
 </body>
