--- a/public/workout.html
+++ b/public/workout.html
@@ -1,6 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <head>
+  <meta charset="UTF-8" />
+  <title>Workout Page</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <link rel="stylesheet" href="style.css" /> <!-- optional -->
+
+  <style>
+    html, body {
+      height: 100%;
+      margin: 0;
+      padding: 0;
+      overflow-y: auto;
+      overflow-x: hidden;
+      -webkit-overflow-scrolling: touch;
+    }
+
+    .page {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
+  </style>
+</head>
+
   <meta charset="UTF-8" />
   <title>Create Workout</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
