PWA-ready index.html

--- a/public/workout.html
+++ b/public/workout.html
@@ -1,35 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <head>
   <meta charset="UTF-8" />
   <title>Workout Page</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="style.css" /> <!-- optional -->
+
+  <link rel="stylesheet" href="style.css" />
 
   <style>
+    /* --- Ensure body/page scroll works --- */
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
-      overflow-y: auto;
-      overflow-x: hidden;
-      -webkit-overflow-scrolling: touch;
+      overflow-x: hidden;          /* prevent horizontal scroll */
+      overflow-y: auto;            /* allow vertical scroll */
+      -webkit-overflow-scrolling: touch; /* smooth scroll on mobile */
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; /* consistent font */
     }
 
     .page {
-      padding-top: 1rem;
-      padding-bottom: 1rem;
+      padding: 1rem;
+      min-height: 100%;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
-  </style>
-</head>
 
-  <meta charset="UTF-8" />
-  <title>Create Workout</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
-  <style>
-    /* Sticky Top Navigation (refined to match app style) */
+    /* --- Sticky Top Navigation --- */
     .top-nav {
       position: sticky;
       top: 0;
@@ -39,13 +36,14 @@
       padding: 1rem;
       text-align: center;
       font-weight: 600;
-      color: #38bdf8; /* matches blue theme */
+      color: #38bdf8; /* matches theme */
       font-size: 1.2rem;
     }
 
+    /* --- Back Button --- */
     .back-btn {
       display: inline-block;
-      margin-top: 0.5rem;
+      margin: 0.5rem auto;
       padding: 0.5rem 1rem;
       border-radius: 10px;
       border: none;
@@ -60,49 +58,97 @@
       opacity: 0.85;
     }
 
-    /* Ensure page content isn't hidden under sticky nav */
-    .page {
-      padding-top: 1rem;
+    /* --- Card & Container Styling --- */
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    input, button {
+      font-family: inherit;
+      font-size: 1rem;
+    }
+
+    #exerciseList {
+      margin-top: 1rem;
+    }
+
+    #addExercise, #saveWorkout, .secondary {
+      margin-top: 0.5rem;
+      display: block;
+      width: 100%;
+      padding: 0.5rem;
+      border-radius: 8px;
+      border: none;
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    #addExercise { background: #0f172a; color: #38bdf8; }
+    #saveWorkout { background: #38bdf8; color: #020617; }
+    .secondary { background: #f3f4f6; color: #111827; }
+
+    /* --- Popup --- */
+    .popup {
+      position: fixed;
+      bottom: 1rem;
+      left: 50%;
+      transform: translateX(-50%);
+      background: #38bdf8;
+      color: #fff;
+      padding: 0.5rem 1rem;
+      border-radius: 8px;
+      display: none;
+      font-weight: 600;
+      z-index: 200;
+    }
+
+    .popup.show {
+      display: block;
     }
   </style>
 </head>
+
 <body>
 
-<!-- NAV BAR -->
-<div class="top-nav">
-  Ascend
-</div>
-<div style="text-align:center;">
-  <button class="back-btn" onclick="window.location.href='dashboard.html'">← Back to Dashboard</button>
-</div>
+  <!-- NAV BAR -->
+  <div class="top-nav">Ascend</div>
 
-<div class="page">
-  <div class="container">
-    <div class="card">
+  <!-- Back Button -->
+  <div style="text-align:center;">
+    <button class="back-btn" onclick="window.location.href='dashboard.html'">← Back to Dashboard</button>
+  </div>
 
-      <input id="workoutName" placeholder="Workout name" />
+  <!-- MAIN PAGE -->
+  <div class="page">
+    <div class="container">
+      <div class="card">
 
-      <div id="exerciseList"></div>
+        <input id="workoutName" placeholder="Workout name" />
 
-      <button type="button" id="addExercise">Add Exercise</button>
-      <button type="button" id="saveWorkout">Save Workout</button>
+        <div id="exerciseList"></div>
 
-      <button
-        type="button"
-        class="secondary"
-        onclick="location.href='view.html'"
-      >
-        View My Workouts
-      </button>
+        <button type="button" id="addExercise">Add Exercise</button>
+        <button type="button" id="saveWorkout">Save Workout</button>
 
+        <button type="button" class="secondary" onclick="location.href='view.html'">
+          View My Workouts
+        </button>
+
+      </div>
     </div>
   </div>
-</div>
 
-<!-- Popup for saving workout -->
-<div id="popup" class="popup hidden">Workout Saved!</div>
+  <!-- Popup for saving workout -->
+  <div id="popup" class="popup hidden">Workout Saved!</div>
 
-<script src="workouts.js"></script>
+  <script src="workouts.js"></script>
 </body>
 </html>
-<div id="popup" class="popup hidden">Workout Saved!</div>
