--- a/public/view.html
+++ b/public/view.html
@@ -1,35 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <head>
   <meta charset="UTF-8" />
-  <title>Workout Page</title>
+  <title>My Workouts</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <link rel="stylesheet" href="style.css" /> <!-- optional -->
+  <link rel="stylesheet" href="style.css">
 
   <style>
+    /* --- Ensure body/page scroll works --- */
     html, body {
       height: 100%;
       margin: 0;
       padding: 0;
-      overflow-y: auto;
-      overflow-x: hidden;
-      -webkit-overflow-scrolling: touch;
+      overflow-x: hidden;           /* prevent horizontal scroll */
+      overflow-y: auto;             /* allow vertical scroll */
+      -webkit-overflow-scrolling: touch; /* smooth scroll on mobile */
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     }
 
     .page {
-      padding-top: 1rem;
-      padding-bottom: 1rem;
+      padding: 1rem;
+      min-height: 100%;
+      overflow-x: hidden;
+      overflow-y: auto;
     }
-  </style>
-</head>
 
-  <meta charset="UTF-8">
-  <title>My Workouts</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    /* Sticky Top Navigation */
+    /* --- Sticky Top Navigation --- */
     .top-nav {
       position: sticky;
       top: 0;
@@ -39,10 +35,11 @@
       padding: 1rem;
       text-align: center;
       font-weight: 600;
-      color: #38bdf8; /* blue theme */
+      color: #38bdf8;
       font-size: 1.2rem;
     }
 
+    /* --- Back Button --- */
     .back-btn {
       display: inline-block;
       margin: 0.5rem auto 1rem auto;
@@ -61,8 +58,17 @@
       opacity: 0.85;
     }
 
-    .page {
-      padding-top: 1rem;
+    /* --- Card & Container Styling --- */
+    .container {
+      max-width: 600px;
+      margin: 0 auto;
+    }
+
+    .card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 1rem;
+      margin-bottom: 1rem;
     }
 
     details.exercise {
@@ -89,18 +95,19 @@
     .exercise-name {
       font-weight: 600;
       margin-top: 0.5rem;
+      font-size: 1rem;
     }
 
     .set-item {
       margin-left: 10px;
       font-size: 0.9rem;
       display: flex;
-      gap: 12px; /* space between left/right/weight */
+      gap: 12px;
     }
 
     .set-item span {
       display: inline-block;
-      min-width: 50px; /* aligns nicely */
+      min-width: 50px;
     }
 
     button.danger {
@@ -123,108 +130,112 @@
     details[open] .summary-arrow {
       transform: rotate(90deg);
     }
+
+    button.secondary {
+      margin-top: 0.5rem;
+      display: block;
+      width: 100%;
+      padding: 0.5rem;
+      border-radius: 8px;
+      border: none;
+      background: #f3f4f6;
+      color: #111827;
+      font-weight: 600;
+      cursor: pointer;
+    }
   </style>
 </head>
 <body>
 
-<!-- NAV BAR -->
-<div class="top-nav">
-  Ascend
-</div>
+  <!-- NAV BAR -->
+  <div class="top-nav">Ascend</div>
 
-<!-- Back Button -->
-<div style="text-align:center;">
-  <button class="back-btn" onclick="window.location.href='workout.html'">← Back to Create Workout</button>
-</div>
+  <!-- Back Button -->
+  <div style="text-align:center;">
+    <button class="back-btn" onclick="window.location.href='workout.html'">← Back to Create Workout</button>
+  </div>
 
-<div class="page">
-  <div class="container">
-    <div class="card">
+  <div class="page">
+    <div class="container">
+      <div class="card">
+        <h2>My Workouts</h2>
+        <div id="workoutsList"></div>
 
-      <h2>My Workouts</h2>
-      <div id="workoutsList"></div>
-
-      <button
-        type="button"
-        class="secondary"
-        onclick="location.href='workout.html'"
-      >
-        Create New Workout
-      </button>
-
+        <button type="button" class="secondary" onclick="location.href='workout.html'">
+          Create New Workout
+        </button>
+      </div>
     </div>
   </div>
-</div>
 
-<script>
-const workoutsList = document.getElementById("workoutsList");
+  <script>
+    const workoutsList = document.getElementById("workoutsList");
 
-function loadWorkouts() {
-  const savedWorkouts = JSON.parse(localStorage.getItem("workouts") || "[]");
-  workoutsList.innerHTML = "";
+    function loadWorkouts() {
+      const savedWorkouts = JSON.parse(localStorage.getItem("workouts") || "[]");
+      workoutsList.innerHTML = "";
 
-  savedWorkouts.forEach((workout, index) => {
-    const details = document.createElement("details");
-    details.classList.add("exercise");
+      savedWorkouts.forEach((workout, index) => {
+        const details = document.createElement("details");
+        details.classList.add("exercise");
 
-    const summary = document.createElement("summary");
-    const left = document.createElement("div");
-    left.classList.add("summary-left");
+        const summary = document.createElement("summary");
+        const left = document.createElement("div");
+        left.classList.add("summary-left");
 
-    const arrow = document.createElement("span");
-    arrow.classList.add("summary-arrow");
-    arrow.textContent = "▶";
+        const arrow = document.createElement("span");
+        arrow.classList.add("summary-arrow");
+        arrow.textContent = "▶";
 
-    const title = document.createElement("span");
-    title.textContent = `${workout.name} (${workout.date.split("T")[0]})`;
+        const title = document.createElement("span");
+        title.textContent = `${workout.name} (${workout.date.split("T")[0]})`;
 
-    left.appendChild(arrow);
-    left.appendChild(title);
+        left.appendChild(arrow);
+        left.appendChild(title);
 
-    const deleteBtn = document.createElement("button");
-    deleteBtn.textContent = "Delete";
-    deleteBtn.classList.add("danger");
-    deleteBtn.addEventListener("click", (e) => {
-      e.stopPropagation();
-      savedWorkouts.splice(index, 1);
-      localStorage.setItem("workouts", JSON.stringify(savedWorkouts));
-      loadWorkouts();
-    });
+        const deleteBtn = document.createElement("button");
+        deleteBtn.textContent = "Delete";
+        deleteBtn.classList.add("danger");
+        deleteBtn.addEventListener("click", (e) => {
+          e.stopPropagation();
+          savedWorkouts.splice(index, 1);
+          localStorage.setItem("workouts", JSON.stringify(savedWorkouts));
+          loadWorkouts();
+        });
 
-    summary.appendChild(left);
-    summary.appendChild(deleteBtn);
-    details.appendChild(summary);
+        summary.appendChild(left);
+        summary.appendChild(deleteBtn);
+        details.appendChild(summary);
 
-    const detailsDiv = document.createElement("div");
-    detailsDiv.classList.add("exercise-details");
+        const detailsDiv = document.createElement("div");
+        detailsDiv.classList.add("exercise-details");
 
-    workout.exercises.forEach(ex => {
-      const exName = document.createElement("div");
-      exName.classList.add("exercise-name");
-      exName.textContent = ex.name;
-      detailsDiv.appendChild(exName);
+        workout.exercises.forEach(ex => {
+          const exName = document.createElement("div");
+          exName.classList.add("exercise-name");
+          exName.textContent = ex.name;
+          detailsDiv.appendChild(exName);
 
-      ex.sets.forEach(s => {
-        const setDiv = document.createElement("div");
-        setDiv.classList.add("set-item");
+          ex.sets.forEach(s => {
+            const setDiv = document.createElement("div");
+            setDiv.classList.add("set-item");
 
-        if (ex.unilateral) {
-          setDiv.innerHTML = `<span>Left: ${s.leftReps}</span> <span>Right: ${s.rightReps}</span> <span>Weight: ${s.weight}kg</span>`;
-        } else {
-          setDiv.innerHTML = `<span>Reps: ${s.reps}</span> <span>Weight: ${s.weight}kg</span>`;
-        }
+            if (ex.unilateral) {
+              setDiv.innerHTML = `<span>Left: ${s.leftReps}</span> <span>Right: ${s.rightReps}</span> <span>Weight: ${s.weight}kg</span>`;
+            } else {
+              setDiv.innerHTML = `<span>Reps: ${s.reps}</span> <span>Weight: ${s.weight}kg</span>`;
+            }
 
-        detailsDiv.appendChild(setDiv);
+            detailsDiv.appendChild(setDiv);
+          });
+        });
+
+        details.appendChild(detailsDiv);
+        workoutsList.appendChild(details);
       });
-    });
+    }
 
-    details.appendChild(detailsDiv);
-    workoutsList.appendChild(details);
-  });
-}
-
-loadWorkouts();
-</script>
-
+    loadWorkouts();
+  </script>
 </body>
 </html>
